--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <meta property="og:title" content="애드쿼티">
     <meta property="og:description" content="진짜 인플루언서 광고를 애드쿼티에서 경험하세요!">
-    <meta property="og:image" content="/img/banner.jpg">
+    <meta property="og:image" content="/img/thumbnail.jpg">
 
     <title>애드쿼티</title>
 
