--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 </div>
                 <div>
                     <img src="img/ic_mail_hl.png" alt="메일 상담">
-                    <a href="mailto:coADequity@ADequity.com?subject=애드쿼티 웹사이트에서의 문의입니다" target="_blank">coADequity@ADequity.com</a>
+                    <a href="mailto:cs@adequity.co.kr?subject=애드쿼티 웹사이트에서 문의 드립니다" target="_blank">cs@adequity.co.kr</a>
                 </div>
             </div>
             <form id="form">
